--- a/event_catalog_source_code/css/main.css
+++ b/event_catalog_source_code/css/main.css
@@ -1,17 +1,15 @@
 @charset "UTF-8";
-html {
-  height: 100%;
-  width: 100%; }
-
-body {
-  width: 100%;
-  height: 200%;
-  font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif; }
-
 #landing {
   /* Start primary section */
   /* End primary section */
   /* Start primary section */ }
+  #landing html {
+    height: 100%;
+    width: 100%; }
+  #landing body {
+    width: 100%;
+    height: 200%;
+    font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif; }
   #landing .page-section {
     width: 100%;
     height: 50%; }
@@ -121,5 +119,27 @@ img.slide-img {
 
 .event-show-placeholder {
   padding: 0; }
+
+#ticket-form .table td, #ticket-form .table th, #order-summary .table td, #order-summary .table th {
+  vertical-align: middle;
+  text-align: center; }
+#ticket-form .table input, #order-summary .table input {
+  text-align: center; }
+#ticket-form .table tr, #order-summary .table tr {
+  height: 4em; }
+#ticket-form .error, #order-summary .error {
+  color: red; }
+#ticket-form input.error, #order-summary input.error {
+  border: 1px solid red; }
+#ticket-form .table-total, #order-summary .table-total {
+  font-size: 2em;
+  height: 3em; }
+  #ticket-form .table-total td, #ticket-form .table-total th, #order-summary .table-total td, #order-summary .table-total th {
+    padding: 0.5em; }
+
+.ticket-checkout #shipping-methods .radio label {
+  font-size: 1.5em; }
+.ticket-checkout #shipping-detail-mail {
+  display: none; }
 
 /*# sourceMappingURL=main.css.map */
